# ChatNAV

./: .env.example  .gitignore  .gitmodules  INFRASTRUCTURE.md  README.md  SETUP.md  main.nf  nextflow.config  plan.md  pyproject.toml
app/: config.py  database.py  main.py  models.py  schemas.py
app/routes/: jobs.py
app/services/: demo.py  files.py  pipeline.py  runner.py
benchmark/: compare_runs.py  make_splits.py  run_gartner_benchmark.py  run_gartner_full.py  run_muller_benchmark.py
benchmark/muller/: splits.json
conf/: aws.config  base.config  exp001_binding_0.5.yaml  exp002_ccf_soft.yaml  exp003_continuous_tpm.yaml  exp004_diff_agreto.yaml  exp010_improve.yaml  exp011_oncogene.yaml  exp012_tcr_facing.yaml  local.config  scoring_weights.yaml  test.config
demo/: prepare_demo.sh
docker/cnvkit/: Dockerfile
docker/design/: Dockerfile
docker/hla-hd/: Dockerfile
docker/mhc-binding/: Dockerfile
docker/netmhc/: Dockerfile
docker/pandora/: Dockerfile
docker/parabricks/: Dockerfile
docker/preprocessing/: Dockerfile
docker/pvactools/: Dockerfile
docker/pyclone/: Dockerfile
docker/salmon/: Dockerfile
docker/scoring/: Dockerfile
docker/star-fusion/: Dockerfile
docker/vep/: Dockerfile
experiments/: LOG.md
experiments/baseline_2026-04-07/: config_snapshot.yaml  feature_aucs.json  git_sha.txt  per_patient.tsv  recall_at_20.json  recall_at_50.json  runtime.json
experiments/exp001_binding_0.5/: config_snapshot.yaml  feature_aucs.json  funnel.json  git_sha.txt  per_patient.tsv  recall_at_20.json  recall_at_50.json
experiments/exp002_ccf_soft/: config_snapshot.yaml  funnel.json  per_patient.tsv  recall_at_20.json  recall_at_50.json
experiments/exp003_continuous_tpm/: config_snapshot.yaml  funnel.json  per_patient.tsv  recall_at_20.json  recall_at_50.json
experiments/exp004_diff_agreto/: config_snapshot.yaml  per_patient.tsv  (+2 more)
frontend/: package-lock.json  package.json
models/: CHECKSUMS.txt
reference/: signal_peptides.fasta
scripts/: restore_from_s3.sh
subworkflows/: downstream.nf  mhc_binding_suite.nf  preprocessing.nf  preprocessing_gpu.nf
tests/: run_e2e.py  test_mrna.py  test_polyepitope.py  test_ranking.py  test_scoring.py
(+105 files in other folders)
