[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neoantigen-vaccine-pipeline"
version = "0.1.0"
description = "Personalized mRNA neoantigen vaccine design pipeline"
readme = "plan.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "McClain Thiel"}]

dependencies = [
    "pandas==2.3.2",
    "numpy==2.0.2",
    "biopython==1.85",
    "scipy==1.13.1",
    "pyyaml==6.0.2",
    "requests==2.32.5",
    "scikit-learn==1.6.1",
    "pyensembl==2.3.13",
    "mhcflurry==2.2.0",
]

[project.optional-dependencies]
ml = [
    "lightgbm==4.6.0",
]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
